@@ -1,3 +1,8 @@
+2011-03-05
+* fold walktempdir() into scan()
+* remove some clashes between names of variables and built-in function for
+clarity
+
 2011-03-04
 * rework GIF scanning so we don't unnecessarily loop: merge searchUnpackGIF
 and unpackGIF, add extra checks.
